--- a/php.ini
+++ b/php.ini
@@ -3,4 +3,5 @@ file_uploads = On
 `max_input_time` = 2400
 `post_max_size` = 128M
 `upload_max_filesize` = 128M
+max_input_vars = 5000
 enable_post_data_reading=on
